# RedisLite

./: CMakeLists.txt  README.md  build.sh
include/: server.h
src/: main.c  server.c
